--- a/exercise3.html
+++ b/exercise3.html
@@ -10,5 +10,18 @@
   <body>
     <button class="one">Click Me!</button>
     <button class="two">No, Click Me!</button>
+
+    <!-- Check image source path. Review Foundations lesson - Links and Images -->
+    <!-- Use the classes BELOW this line -->
+    <div>
+      <img class="avatar proportioned" src="https://500px.com/photo/1036810982/carine-presence-by-katho-mutodo" alt="Woman with glasses">
+      <img class="avatar distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
+    </div>
+    <!-- Use the classes ABOVE this line -->
+    <div>
+      <img class="original proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
+      <img class="original distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
+    </div>
+ 
   </body>
 </html>
