--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
     <div class="text">I'm a div with thin text and a child div!
       <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
+
+   
+    <div class="one">
+      DIV ONE
+    </div>
+    <div class="two">
+      DIV TWO
+    </div>
+    <div class="three">
+      DIV THREE
+    </div>
+
+  
+    <div class="card">
+      <h1 class="title">I'm a card</h1>
+      <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
+      <div class="button-container">and a <button>BIG BUTTON</button></div>
+    </div>
+  </body>
+</html>
   </body>
 </html>
 </body>
