--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </script>
 
   <body>
+    <a href="/odin-project/cake.html">Cake recipe</a>
     <p class="para">I'm just a paragraph with extra bold text!</p>
     <p class="small-para">I'm a smaller paragraph, also with extra bold text!</p>
 
