--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
 
-   <a href="/odin-project/cake.html">Cake recipe</a>
+   <a href="flexbox.html">Cake recipe</a>
     <div class="one">
       DIV ONE
     </div>
